# EasyCord

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  MODEL_CONTEXT.md  README.md  RELEASES.md  RELEASE_v3.8.md  RELEASE_v3.9.0.md  RELEASE_v3.md  RELEASE_v4.3.0.md  RELEASE_v4.3.1.md  RELEASE_v4.3.md  RELEASE_v4.4.0.md  RELEASE_v4.5.0-beta.2.md  RELEASE_v4.6.0.md  RELEASE_v6.1.md  benchmark-results.json  cspell.json  model.md  pyproject.toml  release.bat  requirements.txt
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
context/: architecture.md
docs/: EXECUTION_PIPELINE.md  MIGRATION.md  PLUGIN_V2_SPEC.md  api.md  command-sync.md  components-dynamic-routing.md  concepts.md  developer-toolkit.md  examples.md  fork-and-expand.md  getting-started.md  index.md  interactions.md  migration-from-discord.py.md  performance-and-usability.md  performance-tuning.md  quickstart-production.md  release-notes-3.1.2.md  release-notes.md  security-best-practices.md  stability-and-scope.md  troubleshooting.md
easycord/: __init__.py  _bot_commands.py  _bot_events.py  _bot_guild.py  _bot_plugins.py  _context_base.py  _context_channels.py  _context_ui.py  audit.py  bot.py  cli.py  cog.py  composer.py  config.py  context.py  conversation_memory.py  database.py  decorators.py  formatters.py  group.py  guild_adaptation.py  i18n.py  middleware.py  orchestrator.py  plugin.py  registry.py  server_config.py  testing.py  tool_limits.py  tools.py  validators.py
examples/: basic_bot.py  core-bot.py  plugin_bot.py
(+141 files in other folders)
