[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "easycord"
version = "0.1.0"
description = "A developer-friendly Python framework for building Discord bots on top of discord.py"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["easycord*"]
